--- a/home.html
+++ b/home.html
@@ -7,19 +7,13 @@
   }
   #title{
     color: green;
-    font-size: 35px;
-  }
-  a{
-    color: green;
     font-size: 75px;
-    text-decoration: none;
     text-align: center;
-    margin-left: 20%;
   }
   </style>
 </header>
 <body>
-  <div id="title"><a href="www.ripaffliction.com" title="AFFLICTION 2004-2018" rel="home">AFFLICTION 2004-2018</a>       NO KING RULES FOREVER</div>
+  <div id="title">AFFLICTION 2004-2018<br>NO KING RULES FOREVER</div>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/V0aJ9GUuOr4?&autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen style="margin-left: 35%"></iframe>
   <audio autoplay loop>
     <source src="sarahAngels.mp3" type="audio/mpeg">
