--- a/home.html
+++ b/home.html
@@ -121,6 +121,18 @@
             <div data-p="170.00">
                 <img data-u="image" src="warlock_spec_meme.png" />
             </div>
+			<div data-p="170.00">
+                <img data-u="image" src="aff_removed_from_game_1.png" />
+            </div>
+			<div data-p="170.00">
+                <img data-u="image" src="aff_removed_from_game_2.png" />
+            </div>
+			<div data-p="170.00">
+                <img data-u="image" src="aff_removed_from_game_3.png" />
+            </div>
+			<div data-p="170.00">
+                <img data-u="image" src="aff_removed_from_game_4.png" />
+            </div>
         </div>
         
     <script type="text/javascript">jssor_1_slider_init();</script>
